--- a/Ubuntu_20.04/roles/setup/tasks/docker.yml
+++ b/Ubuntu_20.04/roles/setup/tasks/docker.yml
@@ -1,4 +1,10 @@
 ---
+- name: Install docker.io
+  apt:
+    pkg:
+    - docker.io
+    state: present
+
 - name: Ensure docker is running
   service:
     name: docker
