--- a/Ubuntu_20.04/roles/setup/tasks/ntp.yml
+++ b/Ubuntu_20.04/roles/setup/tasks/ntp.yml
@@ -1,4 +1,10 @@
 ---
+- name: Install htpdate
+  apt:
+    pkg:
+    - htpdate
+    state: present
+
 - name: Start service htpdate if not started
   service:
     name: htpdate
